; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/extr_avstring.c_av_escape.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/extr_avstring.c_av_escape.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@AV_BPRINT_SIZE_UNLIMITED = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @av_escape(i8** %0, i8* %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_6__, align 4
  store i8** %0, i8*** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* @AV_BPRINT_SIZE_UNLIMITED, align 4
  %14 = call i32 @av_bprint_init(%struct.TYPE_6__* %12, i32 1, i32 %13)
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @av_bprint_escape(%struct.TYPE_6__* %12, i8* %15, i8* %16, i32 %17, i32 %18)
  %20 = call i32 @av_bprint_is_complete(%struct.TYPE_6__* %12)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %5
  %23 = call i32 @av_bprint_finalize(%struct.TYPE_6__* %12, i8** null)
  %24 = load i32, i32* @ENOMEM, align 4
  %25 = call i32 @AVERROR(i32 %24)
  store i32 %25, i32* %6, align 4
  br label %31

26:                                               ; preds = %5
  %27 = load i8**, i8*** %7, align 8
  %28 = call i32 @av_bprint_finalize(%struct.TYPE_6__* %12, i8** %27)
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %26, %22
  %32 = load i32, i32* %6, align 4
  ret i32 %32
}

declare dso_local i32 @av_bprint_init(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @av_bprint_escape(%struct.TYPE_6__*, i8*, i8*, i32, i32) #1

declare dso_local i32 @av_bprint_is_complete(%struct.TYPE_6__*) #1

declare dso_local i32 @av_bprint_finalize(%struct.TYPE_6__*, i8**) #1

declare dso_local i32 @AVERROR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
